# des-app-rs

./: Cargo.toml  sert_eq!\(plain_text.to_bitvec\(\).len\(\)\,\ 64\)  truct MainKey {
src/: main.rs  pages.rs
src/des/: block.rs  error.rs  lib.rs  main_key.rs  shift.rs  traits.rs
src/pages/: block.rs  key.rs
tests/: block.rs  main_key.rs  shift.rs
