[package]
name = "des-app-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name="app"
path="src/main.rs"

[lib]
name="des"
path="src/des/lib.rs"

[dependencies]
bitvec = { git = "https://github.com/ferrilab/bitvec" }
criterion = "0.5.1"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["debug", "tokio", "wgpu", "lazy"] }
itertools = "0.12.0"
miette = { version = "7.0.0", features = ["fancy"] }
nom = "7.1.3"
rayon = "1.8.0"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"]}
tracing = "0.1.40"

