[package]
name = "des-app-rs"
version = "0.4.0"
edition = "2021"

[[bin]]
name="app"
path="src/main.rs"

[dependencies]
des-ndtp = { git = "https://github.com/Lapppse/des-ndtp.git" }

iced = { version = "0.12.1", features = ["debug", "tokio", "wgpu", "lazy"] }
miette = { version = "7.0.0", features = ["fancy"] }
tokio = { version = "1.35.1", features = ["full"]}
